--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,12 @@ body{
     font-size:1.2rem;
     color:var(--mainYellow);
 }
+.badge{
+    position: absolute;
+    top: -10px;
+    right: -20px;
+    padding: 5px 10px;
+    border-radius: 100%;
+    background-color:var(--mainYellow);
+    color: white;
+}
